syntax = "proto3";
package artery.referral.v1beta1;

import "gogoproto/gogo.proto";
import "artery/referral/v1beta1/types.proto";

option go_package = "github.com/arterynetwork/artr/x/referral/types";

// Params - used for initializing default parameter for x/referral at genesis
message Params {
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.goproto_getters)  = false;

  reserved 2,3;
  reserved "delegating_award","subscription_award";

  CompanyAccounts company_accounts = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "company_accounts",
    (gogoproto.moretags) = "yaml:\"company_accounts\""
  ];
  uint64 transition_price = 4 [
    (gogoproto.jsontag)  = "transition_price",
    (gogoproto.moretags) = "yaml:\"transition_price\""
  ];
}
